fix slogon on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ body{
 .slogon {
   text-align: center;
   font-family: 'BebasNeuewebfont', 'Arial Narrow', Arial, sans-serif;
-  line-height: 10px;
-  font-size: 60px; 
+  line-height: 40px;
+  font-size: 50px; 
   color: rgba(0,0,0,0.6);
   text-shadow: 1px 1px 2px White;
 
